--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,11 @@ dependencies {
     compile 'com.firebaseui:firebase-ui-database:0.4.4'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:design:26.+'
+    compile 'com.github.juanlabrador:badgecounter:1.0.2@aar'
+
     testCompile 'junit:junit:4.12'
+
+
 }
 
 
